Fixed z-index of header

--- a/mainstyles.css
+++ b/mainstyles.css
@@ -77,7 +77,7 @@ a {
 	/*margin-top: -8px;
 	margin-left: -8px;*/
 	margin: 0;
-	z-index: 10;
+	z-index: 30;
 	top: 0;
 	/*background-image: linear-gradient(270deg, #30cfd0 0%, #330867 100%);*/
 	/*background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
